src/main/java/com/example/hyebozabackend/global/error/GlobalExceptionHandler.java
package com.example.hyebozabackend.global.error;

public class GlobalExceptionHandler {
}
